--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%reload_ext sql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Connected: @CourseData.db'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "sqlite:///CourseData.db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +48,6 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>term</th>\n",
        "        <th>crn</th>\n",
        "        <th>location</th>\n",
        "        <th>day</th>\n",
@@ -26,7 +55,6 @@
        "        <th>end</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Fall2014</td>\n",
        "        <td>70384</td>\n",
        "        <td>DSB 105</td>\n",
        "        <td>T</td>\n",
@@ -34,7 +62,6 @@
        "        <td>2014-09-02T09:15:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Fall2014</td>\n",
        "        <td>70384</td>\n",
        "        <td>DSB 105</td>\n",
        "        <td>F</td>\n",
@@ -42,7 +69,6 @@
        "        <td>2014-09-05T09:15:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Fall2014</td>\n",
        "        <td>70384</td>\n",
        "        <td>DSB 105</td>\n",
        "        <td>T</td>\n",
@@ -50,7 +76,6 @@
        "        <td>2014-09-09T09:15:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Fall2014</td>\n",
        "        <td>70384</td>\n",
        "        <td>DSB 105</td>\n",
        "        <td>F</td>\n",
@@ -58,7 +83,6 @@
        "        <td>2014-09-12T09:15:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Fall2014</td>\n",
        "        <td>70384</td>\n",
        "        <td>DSB 105</td>\n",
        "        <td>T</td>\n",
@@ -66,7 +90,6 @@
        "        <td>2014-09-16T09:15:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Fall2014</td>\n",
        "        <td>70384</td>\n",
        "        <td>DSB 105</td>\n",
        "        <td>F</td>\n",
@@ -74,7 +97,6 @@
        "        <td>2014-09-19T09:15:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Fall2014</td>\n",
        "        <td>70384</td>\n",
        "        <td>DSB 105</td>\n",
        "        <td>T</td>\n",
@@ -82,7 +104,6 @@
        "        <td>2014-09-23T09:15:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Fall2014</td>\n",
        "        <td>70384</td>\n",
        "        <td>DSB 105</td>\n",
        "        <td>F</td>\n",
@@ -90,7 +111,6 @@
        "        <td>2014-09-26T09:15:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Fall2014</td>\n",
        "        <td>70384</td>\n",
        "        <td>DSB 105</td>\n",
        "        <td>T</td>\n",
@@ -98,7 +118,6 @@
        "        <td>2014-09-30T09:15:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Fall2014</td>\n",
        "        <td>70384</td>\n",
        "        <td>DSB 105</td>\n",
        "        <td>F</td>\n",
@@ -108,19 +127,19 @@
        "</table>"
       ],
       "text/plain": [
-       "[('Fall2014', '70384', 'DSB 105', 'T', '2014-09-02T08:00:00', '2014-09-02T09:15:00'),\n",
-       " ('Fall2014', '70384', 'DSB 105', 'F', '2014-09-05T08:00:00', '2014-09-05T09:15:00'),\n",
-       " ('Fall2014', '70384', 'DSB 105', 'T', '2014-09-09T08:00:00', '2014-09-09T09:15:00'),\n",
-       " ('Fall2014', '70384', 'DSB 105', 'F', '2014-09-12T08:00:00', '2014-09-12T09:15:00'),\n",
-       " ('Fall2014', '70384', 'DSB 105', 'T', '2014-09-16T08:00:00', '2014-09-16T09:15:00'),\n",
-       " ('Fall2014', '70384', 'DSB 105', 'F', '2014-09-19T08:00:00', '2014-09-19T09:15:00'),\n",
-       " ('Fall2014', '70384', 'DSB 105', 'T', '2014-09-23T08:00:00', '2014-09-23T09:15:00'),\n",
-       " ('Fall2014', '70384', 'DSB 105', 'F', '2014-09-26T08:00:00', '2014-09-26T09:15:00'),\n",
-       " ('Fall2014', '70384', 'DSB 105', 'T', '2014-09-30T08:00:00', '2014-09-30T09:15:00'),\n",
-       " ('Fall2014', '70384', 'DSB 105', 'F', '2014-10-03T08:00:00', '2014-10-03T09:15:00')]"
+       "[('70384', 'DSB 105', 'T', '2014-09-02T08:00:00', '2014-09-02T09:15:00'),\n",
+       " ('70384', 'DSB 105', 'F', '2014-09-05T08:00:00', '2014-09-05T09:15:00'),\n",
+       " ('70384', 'DSB 105', 'T', '2014-09-09T08:00:00', '2014-09-09T09:15:00'),\n",
+       " ('70384', 'DSB 105', 'F', '2014-09-12T08:00:00', '2014-09-12T09:15:00'),\n",
+       " ('70384', 'DSB 105', 'T', '2014-09-16T08:00:00', '2014-09-16T09:15:00'),\n",
+       " ('70384', 'DSB 105', 'F', '2014-09-19T08:00:00', '2014-09-19T09:15:00'),\n",
+       " ('70384', 'DSB 105', 'T', '2014-09-23T08:00:00', '2014-09-23T09:15:00'),\n",
+       " ('70384', 'DSB 105', 'F', '2014-09-26T08:00:00', '2014-09-26T09:15:00'),\n",
+       " ('70384', 'DSB 105', 'T', '2014-09-30T08:00:00', '2014-09-30T09:15:00'),\n",
+       " ('70384', 'DSB 105', 'F', '2014-10-03T08:00:00', '2014-10-03T09:15:00')]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +171,7 @@
        "[]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +219,7 @@
        "[]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -221,30 +240,20 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///CourseData.db\n",
-      "31505 rows affected.\n"
+      "(sqlite3.OperationalError) no such column: term [SQL: 'INSERT INTO coursemeetings (term, crn, location, day, start, end)\\nSELECT term, crn, location, day, start, end\\nFROM import_coursemeetingsF14'] (Background on this error at: http://sqlalche.me/e/e3q8)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "INSERT INTO coursemeetings (term,crn,location,day,start,end)\n",
-    "SELECT term,crn,location,day,start,end\n",
+    "INSERT INTO coursemeetings (term, crn, location, day, start, end)\n",
+    "SELECT term, crn, location, day, start, end\n",
     "FROM import_coursemeetingsF14"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -252,18 +261,8 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///CourseData.db\n",
-      "31456 rows affected.\n"
+      "(sqlite3.OperationalError) no such column: term [SQL: 'INSERT INTO coursemeetings (term,crn,location,day,start,end)\\nSELECT term,crn,location,day,start,end\\nFROM import_coursemeetingsF15'] (Background on this error at: http://sqlalche.me/e/e3q8)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -275,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -294,15 +293,15 @@
        "        <th>COUNT (*)</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>62961</td>\n",
+       "        <td>0</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(62961,)]"
+       "[(0,)]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -323,18 +322,8 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///CourseData.db\n",
-      "31474 rows affected.\n"
+      "(sqlite3.OperationalError) no such column: term [SQL: 'INSERT INTO coursemeetings (term,crn,location,day,start,end)\\nSELECT term,crn,location,day,start,end\\nFROM import_coursemeetingsF16'] (Background on this error at: http://sqlalche.me/e/e3q8)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -346,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -365,15 +354,15 @@
        "        <th>COUNT (*)</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>94435</td>\n",
+       "        <td>0</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(94435,)]"
+       "[(0,)]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -394,18 +383,8 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///CourseData.db\n",
-      "31400 rows affected.\n"
+      "(sqlite3.OperationalError) no such column: term [SQL: 'INSERT INTO coursemeetings (term,crn,location,day,start,end)\\nSELECT term,crn,location,day,start,end\\nFROM import_coursemeetingsF17'] (Background on this error at: http://sqlalche.me/e/e3q8)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1522,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1530,19 +1509,8 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///CourseData.db\n",
-      "Done.\n",
-      "Done.\n"
+      "(sqlite3.OperationalError) no such table: courses [SQL: 'DROP TABLE courses;'] (Background on this error at: http://sqlalche.me/e/e3q8)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 136,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2430,6 +2398,35 @@
     "%%sql\n",
     "SELECT COUNT (*)\n",
     "FROM courses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Cell magic `%%sql` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "DROP TABLE course_catalog;\n",
+    "CREATE TABLE course_catalog (\n",
+    "    program_code TEXT NOT NULL,\n",
+    "    program_name TEXT NOT NULL,\n",
+    "    catalog_id TEXT PRIMARY KEY,\n",
+    "    course_title TEXT NOT NULL,\n",
+    "    credits TEXT,\n",
+    "    prereqs TEXT,\n",
+    "    coreqs TEXT,\n",
+    "    fees TEXT,\n",
+    "    attributes TEXT,\n",
+    "    description TEXT NOT NULL);\n"
    ]
   },
   {
