--- a/CourseDataETL (1).ipynb
+++ b/CourseDataETL (1).ipynb
@@ -2992,10 +2992,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///CourseData2.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "DROP TABLE import_coursesF14;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///CourseData2.db\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "DROP TABLE import_coursemeetingsF14;  \n",
+    "DROP TABLE import_coursemeetingsF15;  \n",
+    "DROP TABLE import_coursemeetingsF16;   \n",
+    "DROP TABLE import_coursemeetingsF17;   \n",
+    "DROP TABLE import_coursemeetingsF18;   \n",
+    "DROP TABLE import_coursemeetingsS15;   \n",
+    "DROP TABLE import_coursemeetingsS16;   \n",
+    "DROP TABLE import_coursemeetingsS17;   \n",
+    "DROP TABLE import_coursemeetingsS18;  \n",
+    "DROP TABLE import_coursemeetingsS19;   \n",
+    "DROP TABLE import_coursemeetingsSB17;  \n",
+    "DROP TABLE import_coursemeetingsSU15;  \n",
+    "DROP TABLE import_coursemeetingsSU16;  \n",
+    "DROP TABLE import_coursemeetingsSU17;  \n",
+    "DROP TABLE import_coursemeetingsSU18;  \n",
+    "DROP TABLE import_coursemeetingsW15;   \n",
+    "DROP TABLE import_coursemeetingsW16;  \n",
+    "DROP TABLE import_coursemeetingsW17;   \n",
+    "DROP TABLE import_coursesF15;\n",
+    "DROP TABLE import_coursesF16;\n",
+    "DROP TABLE import_coursesF17;\n",
+    "DROP TABLE import_coursesF18;\n",
+    "DROP TABLE import_coursesS15;\n",
+    "DROP TABLE import_coursesS16;\n",
+    "DROP TABLE import_coursesS17;\n",
+    "DROP TABLE import_coursesS18;\n",
+    "DROP TABLE import_coursesS19;\n",
+    "DROP TABLE import_coursesSB17;\n",
+    "DROP TABLE import_coursesSU15;\n",
+    "DROP TABLE import_coursesSU16;\n",
+    "DROP TABLE import_coursesSU17;\n",
+    "DROP TABLE import_coursesSU18;\n",
+    "DROP TABLE import_coursesW15;\n",
+    "DROP TABLE import_coursesW16;\n",
+    "DROP TABLE import_coursesW17;\n",
+    "DROP TABLE import_coursesW18;"
+   ]
   },
   {
    "cell_type": "code",
